
- Fix test_pty.py to not hang on OS X (and theoretically other *nixes) when
  run in verbose mode.

- Bug #1693258: IDLE would show two "Preferences" menu's with some versions
  of Tcl/Tk

- Issue1385: The hmac module now computes the correct hmac when using hashes
  with a block size other than 64 bytes (such as sha384 and sha512).


Extension Modules
-----------------

- Bug #1649098: Avoid declaration of zero-sized array declaration in
  structure.

- Bug #1703286: ctypes no longer truncates 64-bit pointers.

- Bug #1721309: prevent bsddb module from freeing random memory.

- Bug #1233: fix bsddb.dbshelve.DBShelf append method to work as
  intended for RECNO databases.

- Bug #1726026: Correct the field names of WIN32_FIND_DATAA and
  WIN32_FIND_DATAW structures in the ctypes.wintypes module.

- Added support for linking the bsddb module against BerkeleyDB 4.6.x.

- Fix libffi configure for hppa*-*-linux* | parisc*-*-linux*.

- Build using system ffi library on arm*-linux*.

- Bug #1372: zlibmodule.c: int overflow in PyZlib_decompress


Documentation
-------------

- Bug #1637365: add subsection about "__name__ == __main__" to the
  Python tutorial.

- Bug #1569057: Document that calling file.next() on a file open for writing
  has undefined behaviour.  Backport of r54712.

Build
-----

- Bug #1699: Define _BSD_SOURCE only on OpenBSD.

- Bug #1608: use -fwrapv when GCC supports it.  This is important,
  newer GCC versions may optimize away overflow buffer overflow checks
  without this option!

- Allow simultaneous installation of 32-bit and 64-bit versions
  on 64-bit Windows systems.

- Patch #786737: Allow building in a tree of symlinks pointing to
  a readonly source.

- Bug #1737210: Change Manufacturer of Windows installer to PSF.

- Bug #1746880: Correctly install DLLs into system32 folder on Win64.

- Define _BSD_SOURCE, to get access to POSIX extensions on OpenBSD 4.1+.

- Patch #1673122: Use an explicit path to libtool when building a framework. 